tests/ui/traits/non_lifetime_binders/bounds-on-type-binders.stderr
error: bounds cannot be used in this context
  --> $DIR/bounds-on-type-binders.rs:10:12
   |
LL |     for<T: Trait> ():,
   |            ^^^^^

error: aborting due to 1 previous error

